# PinchAnalyser

./: .gitignore  .gitmodules  CMakeLists.txt  FluidisedBed.sln  FluidisedBed.vcxproj  FluidisedBed.vcxproj.filters  LICENSE  README.md
include/: core.h  dingerEngine.h  exchangerEngine.h  fluidEngine.h  renderEngine.h
src/: dingerEngine.cpp  exchangerEngine.cpp  fluidEngine.cpp  main.cpp  renderEngine.cpp
